# Agentic-MPC-RTO

./: .env.example  .gitignore  README.md  REPRODUCE.md  peek_v2.py  pyproject.toml  test.py
agentic_mpc/: __init__.py  interfaces.py  mcp_sandbox.py  mcp_server.py  metrics.py  safety.py  scenario1_agent.py  scenario2_agent.py  scenarios.py  supervisory_apply.py
agentic_mpc/agent/: __init__.py  llm_config.py  rule_based_supervisor.py  supervisor.py  tools.py  validation.py
agentic_mpc/controllers/: __init__.py  classical_mpc.py
agentic_mpc/plants/: __init__.py  wood_berry.py
agentic_mpc/rto/: __init__.py  broyden.py  economics.py  modifier_adaptation.py  rto_mpc_loop.py  wood_berry_rto.py
analysis/: RESULTS.md  build_tables.py  control_regret.py  summary.md
docs/: MCP_SUPERVISOR_DESIGN.md  PAPER_DRAFT.md  RUNPOD.md
examples/: mcp_smoke_client.py
experiments/: _phase1_5_runner.py  phase1_end_to_end.py  phase1_prbs_validation.py  r1_slow_feed_drift.py  r2_efficiency_loss.py  r3_feed_price_spike.py  r4_demand_shift.py  r5_spec_tightening.py  r6_analyzer_gross_error.py  r7_load_disturbance.py  run_all_phase_1_5.sh  s1_calibration_dryrun.py  scenario1_benchmark.py  scenario2_benchmark.py  three_arm_comparison.py
tests/: test_agent_tools.py  test_classical_mpc.py  test_interfaces.py  test_mcp_sandbox.py  test_prompt_v2.py  test_rto_comparators.py  test_rule_based_supervisor.py  test_scenario1_agent.py  test_scenario2_agent.py  test_scenarios.py  test_supervisory_apply.py  test_three_arm.py  test_wood_berry_plant.py  test_wood_berry_rto.py
(+125 files in other folders)
